Performance tracker update